# bmp-rotate

./: CMakeLists.txt  Makefile  README.md  bmp_io.h  bmp_rotate.c  error.h  main.c  makefile
src/: bmp_io.c  bmp_rotate.c  bmp_rotate.h  error.c  error.h  main.c
